@@ -13,7 +13,7 @@
  * @file hamsterdb.h
  * @brief Include file for hamsterdb Embedded Storage
  * @author Christoph Rupp, chris@crupp.de
- * @version 2.0.0 UNSTABLE
+ * @version 2.0.0
  *
  * @mainpage
  *
@@ -599,6 +599,9 @@ ham_env_create(ham_env_t *env, const char *filename,
  *            Page sizes must be 1024 or a multiple of 2048.
  *        <li>@ref HAM_PARAM_MAX_ENV_DATABASES</li> The number of maximum
  *            Databases in this Environment; default value: 16.
+ *        <li>@ref HAM_PARAM_LOG_DIRECTORY</li> The path of the log file
+ *            and the journal files; default is the same path as the database
+ *            file
  *        </ul>
  *
  * @return @ref HAM_SUCCESS upon success
@@ -719,6 +722,9 @@ ham_env_open(ham_env_t *env, const char *filename, ham_u32_t flags);
  *            Databases within a single Environment.
  *            For more information about available DAM (Data Access Mode)
  *            flags, see @ref ham_data_access_modes. The DAM is not persistent.
+ *        <li>@ref HAM_PARAM_LOG_DIRECTORY</li> The path of the log file
+ *            and the journal files; default is the same path as the database
+ *            file
  *      </ul>
  *
  * @return @ref HAM_SUCCESS upon success.
@@ -757,6 +763,8 @@ ham_env_open_ex(ham_env_t *env, const char *filename,
  *        <li>HAM_PARAM_GET_FILENAME</li> returns the filename (the @a value
  *              of this parameter is a const char * pointer casted to a
  *              ham_u64_t variable)
+ *        <li>@ref HAM_PARAM_LOG_DIRECTORY</li> The path of the log file
+ *              and the journal files
  *      </ul>
  *
  * @param env A valid Environment handle
@@ -2098,6 +2106,8 @@ ham_get_key_count(ham_db_t *db, ham_txn_t *txn, ham_u32_t flags,
  *        <li>HAM_PARAM_KEYSIZE</li> returns the key size
  *        <li>HAM_PARAM_MAX_ENV_DATABASES</li> returns the max. number of 
  *              Databases of this Database's Environment
+ *        <li>@ref HAM_PARAM_LOG_DIRECTORY</li> The path of the log file
+ *            and the journal files
  *        <li>HAM_PARAM_GET_FLAGS</li> returns the flags which were used to
  *              open or create this Database
  *        <li>HAM_PARAM_GET_FILEMODE</li> returns the @a mode parameter which
@@ -2140,6 +2150,10 @@ ham_get_parameters(ham_db_t *db, ham_parameter_t *param);
  * expected access mode.
  */
 #define HAM_PARAM_DATA_ACCESS_MODE   0x00000104
+
+/** Parameter name for @ref ham_env_open_ex, @ref ham_env_create_ex, 
+ * @ref ham_open_ex, @ref ham_create_ex; sets the path of the log files */
+#define HAM_PARAM_LOG_DIRECTORY      0x00000105
 
 /**
  * Retrieve the Database/Environment flags as were specified at the time of 
