@@ -17,8 +17,11 @@
 #else
 #   include <unistd.h>
 #   include <stdlib.h>
+#   include <sys/types.h>
+#   include <sys/stat.h>
 #endif
 #include <string.h>
+#include <stdio.h>
 
 #include <ham/types.h>
 #include <../src/error.h>
@@ -117,6 +120,16 @@ public:
                         src, dest, dest);
         return (0==system(buffer));
 #endif
+    }
+
+    /* 
+     * check if a file exists
+     */
+    static bool file_exists(const char *path) {
+        struct stat buf={0};
+        if (stat(path, &buf)<0)
+            return (false);
+        return (true);
     }
 };
 
